# ML-project

./: README.md  app.py  pyproject.toml  setup.py
Notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
Notebook/catboost_info/: catboost_training.json  time_left.tsv
Notebook/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py
src/pipepline/: predict_pipeline.py
templates/: home.html
