[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_Project"
version = "0.0.1"
description = "A custom ML project package"
authors = [
    { name="ManojKumar", email="manojkumar250102@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.4",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "catboost>=1.2.5",
    "Flask>=3.0.3"
]

[tool.setuptools.packages.find]
where = ["src"]

