[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_Project"
version = "0.0.1"
description = "A custom ML project package"
authors = [
    { name="ManojKumar", email="manojkumar250102@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.3,",
    "numpy>=1.24.0,",
    "seaborn>=0.12.2,",
    "matplotlib>=3.6.0,",
    "scikit-learn>=1.2.2,",
    "xgboost>=1.7.6,",
    "catboost>=1.1,",
    "Flask>=2.2.5,"
]

[tool.setuptools.packages.find]
where = ["src"]

